新系统上线日后